<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.mnhyim.dailynotes.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mnhyim.dailynotes.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/listFragment"
        android:name="com.mnhyim.dailynotes.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />
</navigation>